--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,14 @@
 		@@include("html/header.html",{
 		})
 		<main class="page">
-			<sestion data-watch="navigator" id="main" class="main">
+			<section data-watch="navigator" id="main" class="main">
 				<div class="main__container">
 					<div class="main__content">
-
 						<h1 class="main__name">Denis <br> Novik</h1>
 						<p class="main__text">UX | UI designer <br> 24 years old, Minsk</p>
 						<div data-da="#language-select, 767.98,last" class="main__language-select language-select">
 							<span class="language-select__ru">RU</span>
-
-							<!-- <span class="language-select__ru">RU</span> -->
 							<span style="color: black;">|</span>
-							<!-- <span class="language-select__eng _active">ENG</span> -->
-
 							<span class="language-select__eng _active">ENG</span>
 						</div>
 					</div>
@@ -31,7 +26,7 @@
 						<img class="human-mobile" src="@img/main/human-mobile.jpg" alt="">
 					</div>
 				</div>
-			</sestion>
+			</section>
 			<section data-watch="navigator" id="about" class="about">
 				<div class="about__container">
 					<h2 class="about__title title">About me</h2>
